--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -11,17 +11,17 @@
      <div class="background-img">
         <h1></h1>
         <h2></h2>
-        <p id="tekst"></p>
+        <p></p>
           <a href=""><img id="" src=""  alt="" width="" height=""></a>
      </div>
 
      <div class="nav-bar" id="sidenav">
 
              <a id="home" href="#"><img href="64px-Autism_Awareness_Ribbon.png">Home</a>
-             <a id="problem" href="#box1">Problem</a>
-             <a id="diagnosis" href="#box2">Autism diagnosis and problems in educations</a>
-             <a id="features" href="#box3">Features to solve these problems</a>
-             <a id="case" href="#box4">Case study</a>
+             <a id="problem" href="#box1">The Problem</a>
+             <a id="diagnosis" href="#box2">Solution</a>
+             <a id="features" href="#box3">Case Study</a>
+             <a id="case" href="#box4">Design</a>
              <a id="ux" href="#box5">UX & Accessability</a>
              <a id="privacy" href="#box6">Online privacy</a>
              <a id ="" ><img  src="" width="" height=""></a>
@@ -34,85 +34,127 @@
 
     <div class="header" id="topname">
       <h1 class="topname"><b>Final Project</b></h1>
-      <h1 class="topname2"><b>Prosjekt navn.</b></h1>
+      <h1 class="topname2"><b>Co-Lab - creating a safe space for children with ASD</b></h1>
       <hr class="linebreak">
     </div>
 
      <div class="box-1" id="box1">
           <div class=""  id="">
-                  <h1 class="overskrift1"><b>Problem.</b></h1>
+                  <h1 class="overskrift1"><b>The Problem.</b></h1>
                   <hr class="linebreak1">
                   <img src="" alt="" width="" height="">
           </div>
           <div>
                 <h2></h2>
-                <p id="tekst">Countless countries, Norway among them, uphold the fundamental principle of the right to equal education for everyone. Some children do, however, have a harder time getting through elementary (and possibly higher education) than others. This is the case with many people diagnosed with autism spectrum disorder. A lot of children with ASD have limited options when it comes to their education and are either forced to go to schools for children with special needs or attend regular schools with classrooms of up to 30 people at once. Failure in adapting public schools for this specific challenge might result in increased costs for the state, as well as limiting the social training which might lessen the transition into adulthood for high-functional autistic children. </p>
-                <p id="tekst"><figure class="img1">
-                <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
-          </div>
-   </div>
+                <p>Countless countries, Norway among them, uphold the fundamental principle of the right to equal education for everyone. Some children do, however, have a harder time getting through elementary (and possibly higher education) than others. This is the case with many people diagnosed with autism spectrum disorder. A lot of children with ASD have limited options when it comes to their education and are either forced to go to schools for children with special needs or attend regular schools with classrooms of up to 30 people at once. Failure in adapting public schools for this specific challenge might result in increased costs for the state, as well as limiting the social training which might lessen the transition into adulthood for high-functional autistic children. </p>
 
-      <div class="box-2" id="box2">
-          <div class="" id="">
-                <h1 class="overskrift2"><b>Autism diagnosis and problems in educations.</b></h1>
-                <hr class="linebreak2">
-                <img src="" alt="" width="" height="">
-          </div>
-          <div>
-              <h2></h2>
-              <p id="tekst"></p>
-              <p id="tekst"><figure class="img1">
-              <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
-               <a href="./"><button id=""></button></a>
+                <h2>The autism diagnosis and the problems that may arise in a school setting</h2>
+                <p>Autism spectrum disorder (ASD) is a developmental disorder. The characteristics of the disorder is difficulty in communication and interaction with other people, restricted interests, and symptoms that hurt the person’s ability to function properly in the daily life.<a href="https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd/index.shtml" target="_blank"><sup>[1]</sup></a> A child is often diagnosed before reaching the age of five. </p>
+                <p>Seeing as social situations are difficult for people with autism, a classroom can be a very challenging environment for the child. Autism is often linked to sensory dysfunction<a href="https://www.verywellhealth.com/why-school-is-so-challenging-4000048" target="_blank"><sup>[2]</sup></a>, which means sensitivity to noises, bright lights and other sensory inputs. People with autism are also often very dependent on routines and schedules, and are often overwhelmed when these are changed. These issues combined may result in the child acting out, screaming and throwing things  and acting aggressively. Because of these cited problems a lot of the time the child is pulled out of the normal classroom. The child will often have 1-on-1 contact with an assistant at these times, but will have restricted opportunities of teacher-pupil time. By taking into account the extra challenges an autistic child faces when learning to read, write and connect and sort information. This is obviously not ideal.
+                The educational environment in our schools is not accessible for everyone, and it can be the most difficult aspect of the child’s life.
+                </p>
+                <p>Our wish is to present a solution which we think might lessen the burden of making it through public school for people diagnosed with autism disorder.</p>
+                <p><figure class="img1">
+                  <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
+                <a href="./"><button id=""></button></a>
           </div>
       </div>
 
-    <div class="box-3" id="box3">
+    <div class="box-2" id="box2">
           <div class=""  id="">
-              <h1 class="overskrift3"><b>Features to solve these problems.</b></h1>
+              <h1 class="overskrift3"><b>The Solution</b></h1>
               <hr class="linebreak3">
                   <img src="" alt="" width="" height="">
             </div>
             <div>
-                <h2></h2>
-                <p id="tekst"></p>
-                <p id="tekst"><figure class="img1">
+                <p>Anecdotal reports <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3536490/" target="_blank"><sup>[3]</sup></a> suggest that children with autism often have an affinity for screen-based activities. We wanted to make it easier to implement specific learning resources adapted for children, as well as lessening the strain children with autism have to go through on a typical school day, specifically in regards to social interaction, and have therefore made a website specific for students with autism to be used in schools.</p>
+                <h2>Specific Features Adapted for Children with ASD</h2>
+                <h3>Social Stories</h3>
+                <p>Social stories have shown promising results in correcting unwanted behaviors. Social stories<sup>TM</sup> were created by Carol Gray in 1991. They are short descriptions of a particular situation, event or activity, which include specific information about what to expect in that specific situation and why<a href="https://www.autism.org.uk/about/strategies/social-stories-comic-strips.aspx" target="_blank"><sup>[4]</sup></a>. We wish to implement a solution that makes it easy for teachers to create social stories for each student concerning their problematic behavior. These stories can then be presented to the student with a frequency that the teacher sets. Each student can have multiple social stories for them to go through each day.
+                </p>
+                <h3>Language Comprehension</h3>
+                <p>In our day to day life we use a figurative language, full of images and metaphors. This is something that people with autism have a hard time comprehending. Because of these difficulties in grasping figurative language, it is quite common for people with autism to isolate themselves, because they do not understand the conversations they otherwise engage in<a href="https://utdanningsforskning.no/artikler/-skreddersy-undervisningen-til-elever-med-autisme/" target="_blank"><sup>[2]</sup></a>. Studies have shown that metaphors are what they find the most challenging. We therefore wanted to implement a comprehensive learning resource to aid these students in becoming more confident in understanding, and even using, figurative language.
+                </p>
+                <h3>Safe Space</h3>
+                <p>Transitions are one of the things that people with autism respond less well to. Transitions happen everyday at school from one class to another, and from one task to the next. Often, a child prone to reacting to these things at school will become overwhelmed while interacting with peers in group settings, walking down a busy hallway, or eating in a noisy lunchroom. If things aren’t predictable or the transition for the student is harder than on other days the child might experience a meltdown.</p>
+                <p>Meltdowns often occur when unexpected things happen at school. Teachers know their students and can easily see if it is happening, but not always the student itself.
+                  If a meltdown occurs, a teacher may create a safe space that can include beanbags, calming games, such as puzzles, stress balls, or relaxing music.
+                </p>
+                <p>This is why we also wanted to make our own safe space, so the children afflicted can be able to escape the environment that has caused anxiety or discomfort, easily accessible to the student without involvement from an otherwise engaged teacher.</p>
+                <h3>Timetable with To-Do-List</h3>
+                <p>As previously mentioned, students with autism respond very well to well-organized conditions. Structure and consistency are key.
+                  We have implemented a timetable with an easily editable to-do-list set by teachers for the individual student, lessening the uneasiness that might result from the child not knowing what’s coming next from day-to-day. For each subject the student will get specific goals and tasks.
+                </p>
+                <h3>Visual Aid for Mood and Emotion</h3>
+                <p>Another use for our online-based system is to help the students express themselves. A lot of people on the autism spectrum find using oral (and sometimes written) language to express feelings or ideas difficult. There are visual aids, such as cards, widely used for this purpose<a href="https://www.autism.org.uk/visualsupports#" target="_blank"><sup>[5]</sup></a>.
+                  Translating these “emotion cards” to the digital world allows the student to select their own images for the different feelings (much in the same way emoticons are used). We think that this might be good for students with an especially narrow interest field (for example animal based visual aids for students who really love animals - a common fascination among girls with ASD). Digital emotion cards also have the advantage of not being corporeal and therefore not available for throwing (at people).</p>
+                <h3>Teacher/student-chat</h3>
+                <p>With an active chat on the side, the pupil will be able to talk to her assistant and teacher if the child wishes to or needs to. This feature is also an excellent way for the teacher to follow up on the student when he/she is taken out of class.
+                </p>
+                <h3>Week Plan</h3>
+                <p>We have also chosen to implement a week plan in our design to make it easy for the student to have access to information about what’s planned for the entire week, hopefully assisting in reducing the student’s anxiety levels.</p>
+                <p><figure class="img1">
                 <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                 <a href="./"><button id=""></button></a>
           </div>
     </div>
 
-    <div class="box-4" id="box4">
+    <div class="box-3" id="box3">
         <div class=""  id="">
-             <h1 class="overskrift4"><b>Case study.</b></h1>
+             <h1 class="overskrift4"><b>Case study</b></h1>
              <hr class="linebreak4">
              <img src="" alt="" width="" height="">
         </div>
             <div>
               <h2></h2>
-              <p id="tekst"></p>
-              <p id="tekst"><figure class="">
+              <p>Henriette is an 8 year old girl diagnosed with autism. She made it through her first years of public school staying unusually quiet, letting others speak for her and doing her best to stay out of peoples’ hairs. This has become increasingly difficult as the years have gone by as people have started to develop faster than her, using a more varied language and voicing their feelings in a more advanced manner. Henriette also dreads the aspect of attending school more, seeing as she has trouble grasping the rapidly developing social demands set by other pupils while managing the chaotic noises and sights and the changing schedules of the classroom. As a result she has been experiencing more epileptic (a fairly common symptom for especially girls diagnosed with autism<a href="https://www.verywellhealth.com/signs-of-autism-in-girls-260304" target="_blank"><sup>[6]</sup></a>) and/or panic episodes, and often has to leave the classroom entirely for something more quiet.
+              </p>
+              <p>Henriette is very fascinated with trains. She feels that trains are easier to understand than other people and are fun to ride.</p>
+              <p>We have developed our prototype with Henriette in mind, but is easily adaptable to suit any high-functioning autistic children, with a selection of themes commonly enjoyed by groups with very specific interests and the option of creating your own theme for pupils whose interests are even more specific.</p>
+              <p>In order to design a program for Henriette, applicable to others with ASD as well, there are things we have chosen to focus on. Firstly, we know kids diagnosed with autism have problems communicating with other people. Some kids are verbal and some are non verbal. For instance, many autistic people have a hard time maintaining eye contact with others. Being able to work with a computer/pad -based school-program for Henriette would therefore hopefully make her schoolday a bit easier.
+              </p>
+              <p><figure class="">
               <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
               <a href="./"><button id=""></button></a>
           </div>
     </div>
 
-      <div class="box-5" id="box5">
+      <div class="box-4" id="box4">
           <div class=""  id="">
-               <h1 class="overskrift5"><b>UX & Accessability.</b></h1>
+               <h1 class="overskrift5"><b>Design</b></h1>
                <hr class="linebreak5">
                <img src="" alt="" width="" height="">
           </div>
               <div>
-                <h2></h2>
-                <p id="tekst"></p>
-                <p id="tekst"><figure class="">
+                <h3>Sign In</h3>
+                <p>The sign in page is used to make sensitive information regarding the students safe. A realistic plan for this feature is to use Feide’s platform for optimized security.</p>
+                <p>The site should be personalized for students, but not necessarily individuals, seeing as the page is meant to be used by students all over the country, and to limit the need for teachers to worry about this particular element.
+                </p>
+                <h3>Visual aid for mood and emotion</h3>
+                <p>We have added a mood-button on our prototype-website that accesses a range of emotion-cards available for the less vocal student. Our thought is that this will be instantly sent to the teacher for when he/she is otherwise unavailable and easily read and interpreted by teacher-assistants.</p>
+                <p>We chose to implement a train based mood-expressor, catering to Henriette’s specific interest. Our wish is for this to be easily adaptable by teachers, specifically suited for the individual student and their needs.
+                </p>
+                <h3>Language Comprehension</h3>
+                <p>The feature we have showcased gives an example of how an interactive lesson in language comprehension could take place, consisting of a PPT presentation with multiple slides of examples of idiomatic expressions. The teacher or TA could benefit from using this type of digital tool to make learning more fun and interactive. The pupil will try to understand the expression by reading and looking at the images, followed by group discussions and solving tasks independently. The teacher should be certain that the language in the tasks given to the child should be on the reading level of the child so that the site is accessible.
+                </p>
+                <p>We believe this resource in the long run should include multiple ways of approaching this topic, ideally by creating some relevant fun games, exercises and etc.
+                </p>
+                <h3>Timetable</h3>
+                <p>Every page (with the exception of the Safe Space) is equipped with a timetable with a plan for the day, hopefully limiting the unrest the child experiences by not knowing what’s going to happen next.
+                </p>
+                <p>The pupil will then have the option of checking off each item on the to-do-list when completed, earning praise every time. The aspect of praise is among the many things where the opinion of children with autism don’t differ from children without autism; they all very much appreciate it and are motivated by it. Moreover, research have shown that strategies involving reinforcements are effective when wanting to improve the behavior of people with autism
+                  <a href="https: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5702301/" target="_blank"><sup>[7]</sup></a>.
+                </p>
+                <p>In addition, by including a “done”-button it would be easy to implement a way for an absent teacher to be notified when the student has completed his or her task.</p>
+                <h3>Social Stories</h3>
+                <p></p>
+                <p><figure class="">
                 <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                 <a href="./"><button id=""></button></a>
             </div>
         </div>
 
-        <div class="box-6" id="box6">
+        <div class="box-5" id="box5">
             <div class=""  id="">
                  <h1 class="overskrift6"><b>Online privacy.</b></h1>
                  <hr class="linebreak6">
@@ -120,8 +162,8 @@
             </div>
                 <div>
                   <h2></h2>
-                  <p id="tekst"></p>
-                  <p id="tekst"><figure class="">
+                  <p></p>
+                  <p><figure class="">
                   <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                   <a href="./"><button id=""></button></a>
               </div>
