--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -43,6 +43,7 @@
      <div class="box-1" id="box1">
           <div class=""  id="">
                   <h1 class="overskrift1"><b>The Problem.</b></h1>
+                  <h1 class="overskrift1"><b>The Problem</b></h1>
                   <hr class="linebreak1">
                   <img src="" alt="" width="" height="">
           </div>
@@ -176,6 +177,32 @@
                 <p>In addition, by including a “done”-button it would be easy to implement a way for an absent teacher to be notified when the student has completed his or her task.</p>
                 <h3>Social Stories</h3>
                 <p></p>
+                <p>It has been shown that pictures and videos can complement the social story strategy, so our solution aims to have an easy way to include this. The story making process will be easy for the teacher to understand and to update. There will be guidelines for the teacher to follow when creating a story and the site will also include some premade stories involving common classroom situations. If images are used these should have a good explanation of what is depicted. If the teacher chooses to use videos, they should be captioned as well as have extended audio descriptions.
+                </p>
+                <p>We have implemented a few short Social Stories in our prototype as an example of what we are attempting to do, with a reward system for completing the stories of the day.
+                </p>
+                <h3>Safe Space</h3>
+                <p>The screen-based safe space implemented in the prototype is intended to be fully customizable to suit the individual child’s needs. The Safe Space site can be anything that makes the student calm down, from VR/AR or just as easy something as simple as watching a train go by, like in Henriette’s case.</p>
+                <p>VR/AR has the advantage of giving the child the option of shutting out all other visual impulses and immersing themselves in a platform outside of the realm of noisy and active fellow students.
+                </p>
+                <p>Furthermore, the benefits of using virtual reality (VR) interventions are highlighted in recent research<a href="https://ac.els-cdn.com/S0747563216303089/1-s2.0-S0747563216303089-main.pdf?_tid=bc873b79-37b6-481b-83a5-d2e14bbd3b50&acdnat=1543393649_62512a92584cfb5ef41471cf04c8ca2a" target="_blank"><sup>[8]</sup></a>,
+                in which individuals with ASD can practice difficult or individually challenging social interactions in a less-anxiety producing platform
+                A recent study<a href="https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0100374&type=printable" target="_blank"><sup>[8]</sup></a> also shows that cognitive behaviour therapy techniques in an immersive virtual reality environment can be highly effective for the treatment of specific phobias/fears for some people with ASD.</p>
+                <p>In addition to VR-headsets the students can be supplied with noise-canceling headsets in order to escape the outside world completely.
+                </p>
+                <p>We want the SafeSpace function to be able to be designed and adapted by the user, in combination with teacher, if they want to, seeing as the interests of people diagnosed with autism are varied and many. Different things will also relax different children, so we feel it is important to keep the child’s individual needs in mind when creating the safe space. In addition, we plan for the program to include some standard options that are typical for people with autism to calm down to.
+                </p>
+                <p>Providing a safe space for people suffering from autism when they are feeling anxious or overwhelmed can be very helpful. It is, however, important to keep in mind that a safe space should not be used as a regular solution to anxiety. Rather, it should be used only when needed during extreme situations of duress. If a safe space is overused it could become a way to escape daily life and activities in fear of anxiety triggers, which is not our intention. In order to limit the use of this function, as well as keeping the teacher informed, we therefore also plan to have the teacher receive an instant notification whenever the child enters the safe space.</p>
+                <h3>Chat</h3>
+                <p>In the chat we want the student to be able to choose if they want to write with words or with emojis in the way they would want to express themselves. These emojis should also be adaptable for the individual student should the teacher and child wish it (for instance happy/sad/angry train).
+                </p>
+                <p>In the future we would also like to implement a button for the teacher to disable notifications from the chat/block student if the child is being too unreasonable.
+                </p>
+                <p>Our design for the chat-window is limited by our restricted knowledge of coding. Due to privacy-considerations we would like this aspect of the web-page to be based on peer-to-peer communication with the teacher, limiting the chance of sensitive information being released. We have been informed by a source bound by a confidentiality agreement that chats by third parties are being extensively used for communication by teacher/students with ASD in schools today, which is quite foreboding.
+                </p>
+                <p>The chat window is not available for use on mobile phones due to restricted screen space. JavaScript would enable us to make the chat window pop up and down at the user’s request, but would limit responsivity with JavaScript enabled.</p>
+                <h3>Week Plan</h3>
+                <p>The week plan will be easily editable for both student and teacher with the option of adding elements to the homework and school-assignments.</p>
                 <p><figure class="">
                 <img src="" width="" height=""><figcaption> <a  href="#"></a> </figcaption></figure></p>
                 <a href="./"><button id=""></button></a>
