--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -78,13 +78,13 @@
     <!-- Navigation bar -->
       <div class="secondboxes">
             <div id="navigationbar">
-                <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-                <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
-                <a  href="homework.html"><img id="Assignment" src="Pictures/Assignments.png" alt="Language comprehension" width="50" height="50"><br>LANGUAGE <br> COMPREHENSION </a>
-                <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
-                <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-                <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
-                <a  href="socialstory.html"><img src="Pictures/SocialStory.png" alt="Social story" width="50" height="50"><br>SOCIAL STORY</a>
+                <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" height="38"><br>Sign out</a>
+                <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" height="38"><br>HOME</a>
+                <a  href="homework.html"><img id="Assignment" src="Pictures/Assignments.png" alt="Language comprehension" height="38"><br>LANGUAGE <br> COMPREHENSION </a>
+                <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" height="38"><br>WEEK PLAN</a>
+                <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" height="38"><br> SAFE SPACE</a>
+                <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" height="38"><br>MOOD</a>
+                <a  href="socialstory.html"><img src="Pictures/SocialStory.png" alt="Social story" height="38"><br>SOCIAL STORY</a>
             </div>
       </div>
 
