--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -1,95 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css.css">
-    <title> Language comprehension exercise example </title>
 
-</head>
+  <head>
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Web resource for children diagnosed with ASD in schools</title>
+  </head>
 
-<body>
-  <!-- Header with date -->
-  <div class="header">
-    <h2>Monday 17. January</h2>
-    <h3>2020</h3>
-  </div>
-
-  <!-- timetable and to-do list -->
-  <div class="timetable">
-    <div id="time" class="columntitle">
-      <h4>Time</h4>
-    </div>
-    <div id="subject" class="columntitle">
-      <h4>Subject</h4>
-    </div>
-    <div id="to-do" class="columntitle">
-      <h4>To-do</h4>
+  <body>
+    <div class="header">
+      <h2>Monday 17. January</h2>
+      <h3>2020</h3>
+      <a href="main.html"><button type="button" id="leftside" class="btn">Return to menu</button></a>
     </div>
 
-    <div id="åtte" class="timetablebody">
-      <h5>08.15-10.00</h5>
-    </div>
-    <div id="åtte" class="timetablebody">
-      <h5>Norwegian (Social Story)</h5>
-    </div>
-    <div id="åtte" class="timetablebody">
-      <h5>Write a social story about feeling mad</h5>
-      <a href="yay.webp" target="_blank"><button type="button">Done!</button></a>
-    </div>
-    <div id="pause" class="timetablebody">
-      <h5>10.00-10.15</h5>
-    </div>
-    <div id="pause" class="timetablebody">
-      <h5>Break (outside)</h5>
-    </div>
-    <div id="pause" class="timetablebody">
-      <h5>Have fun!</h5>
-    </div>
-    <div id="ti" class="timetablebody">
-      <h5>10.15-12.00</h5>
-    </div>
-    <div id="ti" class="timetablebody">
-      <h5>Maths</h5>
-    </div>
-    <div id="ti" class="timetablebody">
-      <h5>Chapter 10: Exercise 10.2, 10.4, 10.5</h5>
-      <a href="Picturess/awesome.gif" target="_blank"><button type="button">Done!</button></a>
-      <h5>Chapter 11: Exercise 11.4, 11.5, 11.13</h5>
-      <a href="Picturess/bravo.gif" target="_blank"><button type="button">Done!</button></a>
-    </div>
-    <div id="lunsj" class="timetablebody">
-      <h5>12.00-12.30</h5>
-    </div>
-    <div id="lunsj" class="timetablebody">
-      <h5>Lunchbreak (inside or outside)</h5>
-    </div>
-    <div id="lunsj" class="timetablebody">
-      <h5>Play a game with someone</h5>
-      <a href="Picturess/whoopie.gif" target="_blank"><button type="button">Done!</button></a>
-    </div>
-    <div id="12" class="timetablebody">
-      <h5>12.30-14.00</h5>
-    </div>
-    <div id="12" class="timetablebody">
-      <h5>English</h5>
-    </div>
-    <div id="12" class="timetablebody">
-      <h5>Language Comprehension Assignment</h5>
-      <a href="Picturess/sweet.gif" target="_blank"><button type="button">Done!</button></a>
-    </div>
-  </div>
+    <div class="timetable">
+      <div id="time" class="columntitle1 border">
+        <h4>Time</h4>
+      </div>
+      <div id="subject" class="columntitle2 border">
+        <h4>Subject</h4>
+      </div>
+      <div id="to-do" class="columntitle3 border">
+        <h4>To-do</h4>
+      </div>
 
-<!-- Navigation bar -->
-  <div class="secondboxes">
-        <div id="navigationbar">
-            <a  href="Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-            <a  href="main.html"><img id="home" src="Pictures/house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
-            <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
-            <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-            <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
-            <a  href="socialstory.html"><img src="Pictures/SocialStory.png" alt="Social story" width="50" height="50"><br>SOCIAL STORY</a>
-        </div>
-  </div>
+      <div id="åtte" class="timetablebody border2">
+        <h5>08.15-10.00</h5>
+      </div>
+      <div id="åtte2" class="timetablebody border2">
+        <h5>Norwegian (Social Story)</h5>
+      </div>
+      <div id="åtte3" class="timetablebody border2">
+        <h5>Write a social story about feeling mad</h5>
+        <a href="yay.webp" target="_blank"><button type="button">Done!</button></a>
+      </div>
+      <div id="pause" class="timetablebody border2">
+        <h5>10.00-10.15</h5>
+      </div>
+      <div id="pause2" class="timetablebody border2">
+        <h5>Break (outside)</h5>
+      </div>
+      <div id="pause3" class="timetablebody border2">
+        <h5>Have fun!</h5>
+      </div>
+      <div id="ti" class="timetablebody border2">
+        <h5>10.15-12.00</h5>
+      </div>
+      <div id="ti2" class="timetablebody border2">
+        <h5>Maths</h5>
+      </div>
+      <div id="ti3" class="timetablebody border2">
+        <h5>Chapter 10: Exercise 10.2, 10.4, 10.5</h5>
+        <a href="Pictures/awesome.gif" target="_blank"><button type="button">Done!</button></a>
+        <h5>Chapter 11: Exercise 11.4, 11.5, 11.13</h5>
+        <a href="Pictures/bravo.gif" target="_blank"><button type="button">Done!</button></a>
+      </div>
+      <div id="lunsj" class="timetablebody border2">
+        <h5>12.00-12.30</h5>
+      </div>
+      <div id="lunsj2" class="timetablebody border2">
+        <h5>Lunchbreak (inside or outside)</h5>
+      </div>
+      <div id="lunsj3" class="timetablebody border2">
+        <h5>Play a game with someone</h5>
+        <a href="Pictures/whoopie.gif" target="_blank"><button type="button">Done!</button></a>
+      </div>
+      <div id="12" class="timetablebody border2">
+        <h5>12.30-14.00</h5>
+      </div>
+      <div id="12_2" class="timetablebody border2">
+        <h5>English</h5>
+      </div>
+      <div id="12_3" class="timetablebody border2">
+        <h5>Language Comprehension Assignment</h5>
+        <a href="Pictures/sweet.gif" target="_blank"><button type="button">Done!</button></a>
+      </div>
+    </div>
+
+    <!-- Navigation bar -->
+      <div class="secondboxes">
+            <div id="navigationbar">
+                <a  href="Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="Pictures/train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+                <a  href="homework.html"><img id="Assignment" src="Pictures/Assignments.png" alt="Language comprehension" width="50" height="50"><br>LANGUAGE <br> COMPREHENSION </a>
+                <a  href="timetable.html"><img src="Pictures/Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
+                <a  href="SafeSpace.html"><img src="Pictures/safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
+                <a  href="mood.html"><img src="Pictures/Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+                <a  href="socialstory.html"><img src="Pictures/SocialStory.png" alt="Social story" width="50" height="50"><br>SOCIAL STORY</a>
+            </div>
+      </div>
 
 
 <!-- content -->
@@ -165,20 +163,16 @@
 var i = 1;
 show(i)
 showSlide(i)
-
 function add() {
   show(i+=1);
 }
-
 function subtract() {
   show(i-=1);
 }
-
 function showSlide(n) {
   i = n;
   show(i);
 }
-
 function show(n){
   var j;
   var x = document.getElementsByClassName("homework");
@@ -193,7 +187,6 @@ function show(n){
   }
   x[i-1].style.display="block";
 }
-
 </script>
 
 
