fikset noen ting

--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -91,6 +91,7 @@
 
 
 <!-- content -->
+<div class="midcontent2">
 <div class="homework-container">
   <div class="homework-slides">
     <button class="select-slide" onclick="showSlide(1)">1</button>
@@ -115,7 +116,7 @@
     <button class="arrows" onclick="add()">&#10095;</button>
   </div>
 </div>
-
+</div>
 <!-- Chat -->
 <div class="chat" id="chat">
   <div class="chat-header">
