--- a/Final Project/Final Project/mood.html
+++ b/Final Project/Final Project/mood.html
@@ -89,7 +89,7 @@
             </div>
       </div>
 
-
+<div class="midcontent2">
   <div class="mood-container">
     <div class="header" id="mood">
       <h2>How do you feel?</h2>
@@ -128,6 +128,7 @@
         </div>
     </div>
   </div>
+</div>
 
   <!-- Chat -->
   <div class="chat" id="chat">
