--- a/Final Project/Final Project/socialstory.html
+++ b/Final Project/Final Project/socialstory.html
@@ -90,7 +90,7 @@
       </div>
 
 
-
+    <div class ="midcontent2">
       <div class="storyflex">
         <div id="StoryHeader">
           <h1>Playing</h1>
@@ -111,6 +111,7 @@
           <p>I can ask someone else or play by myself</p>
         </div>
       </div>
+</div>
 
       <!-- Chat -->
       <div class="chat" id="chat">
