Lagt til knapp til prototype

--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -36,6 +36,9 @@
     <div class="header" id="topname">
       <h1 class="topname"><b>Final Project</b></h1>
       <h1 class="topname2"><b>Co-Lab - creating a safe space for children with ASD</b></h1>
+      <div class="website">
+        <button id="weblink" class="button">LINK TO WEBSITE PROTOTYPE</button>
+      </div>
       <hr class="linebreak">
     </div>
 
