--- a/Final Project/Final Project/Htmlfinal.html
+++ b/Final Project/Final Project/Htmlfinal.html
@@ -37,7 +37,7 @@
       <h1 class="topname"><b>Final Project</b></h1>
       <h1 class="topname2"><b>Co-Lab - creating a safe space for children with ASD</b></h1>
       <div class="website">
-        <button id="weblink" class="button">LINK TO WEBSITE PROTOTYPE</button>
+        <a href="Signin.html" target="_blank"><button class="button">LINK TO WEBSITE PROTOTYPE</button></a>
       </div>
       <hr class="linebreak">
     </div>
